--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "jade": "^1.11.0",
-    "mailgun-js": "^0.22.0"
+    "mailgun-js": "^0.22.0",
+    "pug": "^3.0.0"
   }
 }
